--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^2.1.4",
     "@chakra-ui/button": "^1.5.1",
     "@chakra-ui/icon": "^2.0.0",
     "@chakra-ui/icons": "^1.1.1",
@@ -14,6 +15,7 @@
     "@types/node": "^12.20.37",
     "@types/react": "^16.14.21",
     "@types/react-dom": "^16.9.14",
+    "aws-amplify": "^4.3.10",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
